# docs/swagger.json
@@ -162,17 +162,6 @@
                     "tenders"
                 ],
                 "summary": "Get tenders",
-                "parameters": [
-                    {
-                        "description": "Tender filter",
-                        "name": "filter",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.GetListTender"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -540,9 +529,6 @@
                 "comments": {
                     "type": "string"
                 },
-                "contractor_id": {
-                    "type": "string"
-                },
                 "delivery_time": {
                     "type": "integer"
                 },
@@ -599,23 +585,6 @@
                 },
                 "field": {
                     "type": "string"
-                },
-                "value": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.GetListTender": {
-            "type": "object",
-            "properties": {
-                "field": {
-                    "type": "string"
-                },
-                "limit": {
-                    "type": "integer"
-                },
-                "page": {
-                    "type": "integer"
                 },
                 "value": {
                     "type": "string"
@@ -696,12 +665,6 @@
         "entity.UpdateTenderStatusRequest": {
             "type": "object",
             "properties": {
-                "client_id": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
                 "new_status": {
                     "type": "string"
                 }
