# internal/infastructure/repository/postgres/tenders/tenders.go
@@ -29,7 +29,6 @@ func (u *TenderRepository) SaveTender(ctx context.Context, req *entity.CreateTen
 	}
 
 	var tender entity.Tender
-
 	if err := u.db.Db.QueryRow(query, args...).Scan(&tender.ID, &tender.ClientID, &tender.Title, &tender.Description, &tender.Deadline, &tender.Budget, &tender.Status, &tender.FileAttachment, &tender.CreatedAt); err != nil {
 		logger.SetupLogger(err.Error())
 		return nil, err
@@ -38,16 +37,6 @@ func (u *TenderRepository) SaveTender(ctx context.Context, req *entity.CreateTen
 }
 
 func (u *TenderRepository) GetTenders(ctx context.Context, req *entity.GetListTender) ([]entity.Tender, error) {
-	// q, a, e := postgres.CloseExpiredTenders()
-	// if e != nil {
-	// 	logger.SetupLogger(e.Error())
-	// 	return nil, e
-	// }
-	// _, err := u.db.Db.Exec(q, a...)
-	// if err != nil {
-	// 	logger.SetupLogger(err.Error())
-	// 	return nil, err
-	// }
 	query, args, err := postgres.GetListTender(req)
 	if err != nil {
 		logger.SetupLogger(err.Error())
@@ -65,7 +54,7 @@ func (u *TenderRepository) GetTenders(ctx context.Context, req *entity.GetListTe
 	for dtenders.Next() {
 		var tender entity.Tender
 
-		if err := dtenders.Scan(&tender.ID, &tender.ClientID, &tender.Title, &tender.Description, &tender.Deadline, &tender.Budget, &tender.Status, &tender.FileAttachment); err != nil {
+		if err := dtenders.Scan(&tender.ID, &tender.ClientID, &tender.Title, &tender.Description, &tender.Deadline, &tender.Budget, &tender.Status, &tender.FileAttachment, &tender.CreatedAt); err != nil {
 			logger.SetupLogger(err.Error())
 			return nil, err
 		}
@@ -82,8 +71,7 @@ func (u *TenderRepository) UpdateTenderStatus(ctx context.Context, req *entity.U
 		return nil, err
 	}
 	var tender entity.Tender
-
-	if err := u.db.Db.QueryRow(query, args...).Scan(&tender.ID, &tender.ClientID, &tender.Title, &tender.Description, &tender.Deadline, &tender.Budget, &tender.Status, &tender.FileAttachment); err != nil {
+	if err := u.db.Db.QueryRow(query, args...).Scan(&tender.ID, &tender.ClientID, &tender.Title, &tender.Description, &tender.Deadline, &tender.Budget, &tender.Status, &tender.FileAttachment, &tender.CreatedAt); err != nil {
 		logger.SetupLogger(err.Error())
 		return nil, err
 	}
